--- a/ContactsApp/src/contacts.form
+++ b/ContactsApp/src/contacts.form
@@ -81,6 +81,16 @@
           <text value="delete"/>
         </properties>
       </component>
+      <component id="24848" class="javax.swing.JTextField" binding="idc">
+        <constraints>
+          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
